<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="80dp"
    android:paddingRight="80dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.tychsen.iandroid.EditActivity">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:labelFor="@+id/txtName"
        android:text="@string/label_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/labelId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/txtId"
        android:text="@string/label_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelId"
        android:ems="10"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/labelAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtId"
        android:layout_marginTop="10dp"
        android:text="@string/label_android"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelAndroid"
        android:layout_toEndOf="@+id/labelAndroid"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layoutDirection="rtl"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layoutDirection="rtl"
            android:text="@string/no" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="20dp"
        android:text="@string/button_cancel" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="20dp"
        android:text="@string/button_save" />

</RelativeLayout>
